# transmuter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Initiative_Portfolio_Anonymised.xlsx  Meetings_V3.md  Meetings_impl.md  README.md  docker-compose.hostinger.api.yml  docker-compose.hostinger.yml  prd.txt  productupgrade.md  productupgrade_addendum.md  start-prod.sh  start.sh  stop-prod.sh  stop.sh
apps/api/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.prod  GEMINI.md  check_archived.py  pyproject.toml  seed_users.py  test_api_v2.py
apps/api/app/: main.py
apps/api/scripts/: bootstrap_hostinger_local.py  ensure_platform_admin.py  load_portfolio_workbook.py  reset_db_except_admin.py  rotate_platform_admin_email.py  seed_dev.py  seed_enterprise_transformation_scenario.py  seed_operating_model_users.py  verify_rls.py
apps/api/tests/: test_admin_setup_status.py  test_agent_observability.py  test_bankable_plans.py  test_benefit_realization_ledger.py  test_bootstrap_hostinger_local.py  test_config.py  test_dashboard_value_matrix.py  test_database.py  test_email_delivery.py  test_executive_control.py  test_financial_dynamic_value_bridge.py  test_financial_formula_metrics.py  test_financial_portfolio.py  test_global_search.py  test_governance.py  test_health.py  test_initiative_context_pull.py  test_initiative_field_extraction.py  test_initiative_intake_agent.py  test_initiative_intake_workflow.py  test_initiative_pnl_bridge.py  test_initiative_setup_gate.py  test_initiatives.py  test_intake_suggestion_skills.py  test_kpis.py  test_meeting_command_center.py  test_meeting_minutes_delivery.py  test_meeting_notes_extraction.py  test_meeting_notes_workflow.py  test_meeting_providers.py  test_meeting_v2_service.py  test_milestones.py  test_observability.py  test_operating_model_rbac.py  test_phase3_4_skills.py  test_platform_admin_bootstrap.py  test_platform_billing_routes.py  test_portfolio_copilot.py  test_portfolio_kpis.py  (+14 more)
(+439 files in other folders)
