[project]
name = "transmuter-api"
version = "0.1.0"
description = "Transmuter Value Creation Platform — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.2",
    # AI / Agents
    "pydantic-ai>=0.0.14",
    "openai>=1.50.0",  # OpenRouter uses OpenAI-compatible API
    # Database
    "supabase>=2.9.0",
    "asyncpg>=0.30.0",
    # Background tasks
    "procrastinate[aiopg]>=2.0.0",
    # Observability
    "langfuse>=2.0.0",
    "logfire[fastapi]>=4.32.1",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.31",
    "sentry-sdk[fastapi]>=2.0.0",
    "psycopg[binary]>=3.3.0",
    "cryptography>=48.0.1",
    "starlette>=1.3.1",
    "joserfc>=1.6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN",
    "B904",
    "B008",
    "E402",
    "E501",
    "E722",
    "E731",
    "SIM102",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]


# Run commands (from apps/api/ directory):
#   uv run uvicorn app.main:app --reload --port 8000
#   uv run --extra dev pytest tests/ -v
#   uv run ruff check app/
